--- a/LD34/LD34/Builds/WebGL/Attempt 1/index.html
+++ b/LD34/LD34/Builds/WebGL/Attempt 1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Gary The Robot</title>
+    <title>Gary The Robot - LD34</title>
     <style>
     /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
     </style>
@@ -21,6 +21,6 @@
   };
 </script>
 <script src="Release/UnityLoader.js"></script>
-
+<a href="http://ludumdare.com/compo/ludum-dare-34/?action=preview&uid=49696">Back to my LD entry page</a>
   </body>
 </html>
