--- a/LD34/LD34/Builds/WebGL/Attempt 1/index.html
+++ b/LD34/LD34/Builds/WebGL/Attempt 1/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Gary The Robot - LD34</title>
     <style>
+    * {
+      margin: auto;
+      width: 60%;
+      border: 3px solid #73AD21;
+      padding: 10px;
+    }
     /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
     </style>
   </head>
