--- a/LD34/LD34/Builds/WebGL/Attempt 1/index.html
+++ b/LD34/LD34/Builds/WebGL/Attempt 1/index.html
@@ -6,10 +6,8 @@
     <title>Gary The Robot - LD34</title>
     <style>
     * {
-      margin: auto;
-      width: 60%;
-      border: 3px solid #73AD21;
-      padding: 10px;
+      font-family: Arial;
+      text-align: center;
     }
     /* a style sheet needs to be present for cursor hiding and custom cursors to work. */
     </style>
