--- a/LD37/index.html
+++ b/LD37/index.html
@@ -32,7 +32,17 @@
 	position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
+    
 }
+        * {
+              -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Chrome/Safari/Opera */
+     -khtml-user-select: none; /* Konqueror */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  not supported by any browser */
+        }
 		
 		@font-face {
 			font-family: 'Nokia Cellphone FC Small';
