--- a/LD37/index.html
+++ b/LD37/index.html
@@ -71,7 +71,7 @@
 	
 	<div id="openfl-content"></div>
 	
-    <img src="assets/images/GameBoy.png" id="gameboy"/>
+    <!--<img src="assets/images/GameBoy.png" id="gameboy"/>-->
     <style>
         #gameboy {
             position: fixed;
