--- a/LD38/Builds/Web1/index.html
+++ b/LD38/Builds/Web1/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | LD38</title>
+    <style>
+    body {
+    	background-color: black;
+    }
+    </style>
     <script src="Build/UnityLoader.js"></script>
     <script>
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Web1.json");
